--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -1,12 +1,12 @@
 .background {
-    -fx-background-color: derive(#ffffff, 20%);
-    background-color: #ffffff; /* Used in the default.html file */
+    -fx-background-color: #3862e0;
+    background-color: #3862e0; /* Used in the default.html file */
 }
 
 .label {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
-    -fx-text-fill: #555555;
+    -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .tab-pane {
-    -fx-padding: 0 0 0 1;
+    -fx-padding: 0 0 0 0;
 }
 
 .tab-pane .tab-header-area {
@@ -40,28 +40,28 @@
 }
 
 .table-view {
-    -fx-base: #1d1d1d;
-    -fx-control-inner-background: #1d1d1d;
-    -fx-background-color: #1d1d1d;
+    -fx-base: #424d5f;
+    -fx-control-inner-background: #424d5f;
+    -fx-background-color: #424d5f;
     -fx-table-cell-border-color: transparent;
     -fx-table-header-border-color: transparent;
-    -fx-padding: 5;
+    -fx-padding: 0;
 }
 
 .table-view .column-header-background {
-    -fx-background-color: transparent;
+    -fx-background-color: opaque;
 }
 
 .table-view .column-header, .table-view .filler {
     -fx-size: 35;
-    -fx-border-width: 0 0 1 0;
+    -fx-border-width: 0 0 0 0;
     -fx-background-color: transparent;
     -fx-border-color:
         transparent
         transparent
-        derive(-fx-base, 80%)
+        transparent
         transparent;
-    -fx-border-insets: 0 10 1 0;
+    -fx-border-insets: 0 0 0 0;
 }
 
 .table-view .column-header .label {
@@ -76,16 +76,17 @@
     -fx-background-color: -fx-focus-color;
 }
 
+/*May be removed if added a separate pane for person info*/
 .split-pane:horizontal .split-pane-divider {
-    -fx-background-color: linear-gradient(#dae2f8, #d6a4a4);
-    -fx-border-color: transparent transparent transparent #4d4d4d;
+    -fx-background-color: white;
+    -fx-border-color: transparent transparent transparent transparent;
 }
 
 .split-pane {
-    -fx-border-radius: 1;
-    -fx-border-width: 1;
-    -fx-background-color: linear-gradient(#dae2f8, #d6a4a4);
-    -fx-padding: 5 10 5 10;
+    -fx-border-radius: 0;
+    -fx-border-width: 0;
+    -fx-background-color: white;
+    -fx-padding: 0 0 0 0;
 }
 
 .list-view {
@@ -100,24 +101,20 @@
 }
 
 .list-cell:filled:even {
-    -fx-background-color: #3c3e3f;
+    -fx-background-color: white;
 }
 
 .list-cell:filled:odd {
-    -fx-background-color: #515658;
+    -fx-background-color: #f2f2f2;
 }
 
+/*May be removed if added a separate pane for person info*/
 .list-cell:filled:selected {
     -fx-background-color: #424d5f;
 }
 
-.list-cell:filled:selected #cardPane {
-    -fx-border-color: #3e7b91;
-    -fx-border-width: 1;
-}
-
 .list-cell .label {
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .cell_big_label {
@@ -133,25 +130,25 @@
 }
 
 .anchor-pane {
-     -fx-background-color: derive(#dae2f8, 20%);
+     -fx-background-color: #404040;
 }
 
 .pane-with-border {
-     -fx-background-color: derive(#dae2f8, 20%);
-     -fx-border-color: derive(#ffffff, 10%);
-     -fx-border-top-width: 1px;
+     -fx-background-color: #262626;
+     -fx-border-color: transparent;
+     -fx-border-top-width: 0px;
 }
 
 .status-bar {
-    -fx-background-color: derive(#1d1d1d, 20%);
-    -fx-text-fill: black;
+    -fx-background-color: black;
+    -fx-text-fill: white;
 }
 
 .result-display {
     -fx-background-color: transparent;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
-    -fx-text-fill: black;
+    -fx-text-fill: white;
 }
 
 .result-display .label {
@@ -160,12 +157,12 @@
 
 .status-bar .label {
     -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: black;
+    -fx-text-fill: white;
 }
 
 .status-bar-with-border {
-    -fx-background-color: derive(#1d1d1d, 30%);
-    -fx-border-color: derive(#1d1d1d, 25%);
+    -fx-background-color: #262626;
+    -fx-border-color: black;
     -fx-border-width: 1px;
 }
 
@@ -174,14 +171,14 @@
 }
 
 .grid-pane {
-    -fx-background-color: derive(#d6a4a4, 20%);
+    -fx-background-color: #262626;
 
     -fx-border-width: 1px;
     -fx-border-color: #383838 transparent transparent transparent;
 }
 
 .grid-pane .anchor-pane {
-    -fx-background-color: derive(#d6a4a4, 20%);
+    -fx-background-color: #262626;
     -fx-padding: 5 10 5 10;
 }
 
@@ -194,13 +191,13 @@
 }
 
 .menu-bar {
-    -fx-background-color: derive(#dae2f8, 20%);
+    -fx-background-color: #262626;
 }
 
 .menu-bar .label {
     -fx-font-size: 14pt;
     -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: black;
+    -fx-text-fill: white;
     -fx-opacity: 0.9;
 }
 
@@ -301,7 +298,7 @@
 }
 
 .scroll-bar:vertical .increment-arrow, .scroll-bar:vertical .decrement-arrow {
-    -fx-padding: 1 8 1 8;
+    -fx-padding: 0 0 0 0;
 }
 
 .scroll-bar:horizontal .increment-arrow, .scroll-bar:horizontal .decrement-arrow {
@@ -329,14 +326,14 @@
 }
 
 #commandTextField {
-    -fx-background-color: transparent #383838 transparent #383838;
+    -fx-background-color: transparent transparent transparent transparent;
     -fx-background-insets: 0;
-    -fx-border-color: #383838 #383838 #383838 #383838;
+    -fx-border-color: transparent transparent transparent transparent;
     -fx-border-insets: 0;
     -fx-border-width: 1;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
-    -fx-text-fill: black;
+    -fx-text-fill: white;
 }
 
 #filterField, #personListPanel, #personWebpage {
@@ -344,9 +341,9 @@
 }
 
 #resultDisplay .content {
-    -fx-background-color:  derive(#dae2f8, 20%);
+    -fx-background-color: #262626;
     -fx-background-width: 2;
-    -fx-border-color: #383838 #383838 #383838 #383838;
+    -fx-border-color: transparent transparent transparent transparent;
 }
 
 #tags {
@@ -355,10 +352,14 @@
 }
 
 #tags .label {
-    -fx-text-fill: black;
-    -fx-background-color: #3e7b91;
+    -fx-text-fill: whitesmoke;
+    -fx-background-color: white;
     -fx-padding: 1 3 1 3;
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
+}
+
+#personDetailsPanelHolder {
+    -fx-background-color: white;
 }
