--- a/src/main/resources/view/PersonDetailsCard.fxml
+++ b/src/main/resources/view/PersonDetailsCard.fxml
@@ -1,105 +1,172 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="cardpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox fx:id="personPanel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane fx:id="grid" prefHeight="400.0" prefWidth="601.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="10.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="110.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <ImageView fx:id="photo" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+         <VBox.margin>
+            <Insets left="50.0" top="20.0" />
+         </VBox.margin>
+         <viewport>
+            <Rectangle2D />
+         </viewport>
+      </ImageView>
+      <Label fx:id="name" alignment="CENTER" prefHeight="26.0" prefWidth="200.0" text="Name" textAlignment="CENTER">
+         <VBox.margin>
+            <Insets bottom="10.0" left="50.0" top="10.0" />
+         </VBox.margin>
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <Line endX="180.0" startX="-100.0" strokeWidth="0.5">
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </Line>
+      <HBox fx:id="phoneBox" prefHeight="40.0" prefWidth="288.0">
          <children>
-            <ImageView fx:id="photo" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-               <GridPane.margin>
-                  <Insets top="20.0" />
-               </GridPane.margin>
-            </ImageView>
-            <ImageView fx:id="phoneIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </ImageView>
-            <ImageView fx:id="addressIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </ImageView>
-            <ImageView fx:id="emailIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </ImageView>
-            <Label fx:id="name" alignment="CENTER" prefHeight="20.0" prefWidth="200.0" text="Name" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="phone" prefWidth="480.0" text="Phone" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <ImageView fx:id="phoneIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="phone" prefWidth="480.0" text="Phone">
                <padding>
                   <Insets left="10.0" />
                </padding>
                <font>
                   <Font size="16.0" />
                </font>
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
             </Label>
-            <Label fx:id="address" prefWidth="380.0" text="Address" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="email" prefWidth="380.0" text="Email" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="birthday" prefWidth="380.0" text="Birthday" GridPane.columnIndex="1" GridPane.rowIndex="5">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </Label>
-            <ImageView fx:id="birthdayIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </ImageView>
-            <Label fx:id="taglabel" text="Tags" GridPane.halignment="RIGHT" GridPane.rowIndex="6">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </Label>
-            <FlowPane fx:id="tags" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
-      </GridPane>
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="10.0" top="5.0" />
+         </padding>
+      </HBox>
+      <Line endX="180.0" startX="-100.0" stroke="#323232" strokeWidth="0.5">
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </Line>
+      <HBox fx:id="addressBox" prefHeight="40.0" prefWidth="288.0">
+         <children>
+            <ImageView fx:id="addressIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="address" prefWidth="380.0" text="Address">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="10.0" top="5.0" />
+         </padding>
+      </HBox>
+      <Line endX="180.0" startX="-100.0" strokeWidth="0.5">
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </Line>
+      <HBox fx:id="emailBox" prefHeight="40.0" prefWidth="276.0">
+         <children>
+            <ImageView fx:id="emailIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="email" prefWidth="380.0" text="Email">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="10.0" top="5.0" />
+         </padding>
+      </HBox>
+      <Line endX="180.0" startX="-100.0" strokeWidth="0.5">
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </Line>
+      <HBox fx:id="birthdayBox" prefHeight="40.0" prefWidth="328.0">
+         <children>
+            <ImageView fx:id="birthdayIcon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" />
+            <Label fx:id="birthday" prefWidth="380.0" text="Birthday">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets top="10.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="10.0" top="5.0" />
+         </padding>
+      </HBox>
+      <Line endX="180.0" startX="-100.0" strokeWidth="0.5">
+         <VBox.margin>
+            <Insets left="10.0" right="10.0" />
+         </VBox.margin>
+      </Line>
+      <HBox fx:id="tagsBox" prefHeight="40.0" prefWidth="300.0">
+         <children>
+            <Label fx:id="taglabel" prefHeight="29.0" prefWidth="51.0" text="Tags">
+               <font>
+                  <Font size="16.0" />
+               </font>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Label>
+            <FlowPane fx:id="tags" prefHeight="100.0" prefWidth="200.0">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin>
+            </FlowPane>
+         </children>
+         <VBox.margin>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="5.0" left="10.0" top="5.0" />
+         </padding>
+      </HBox>
    </children>
-</HBox>
+</VBox>
