--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -30,11 +30,10 @@
         <Label fx:id="name" styleClass="cell_big_label" text="\$first" />
         <ImageView fx:id="photo" />
       </HBox>
-      <FlowPane fx:id="tags" />
-      <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-      <Label fx:id="birthday" styleClass="cell_small_label" text="\$birthday" />
+      <FlowPane fx:id="tags">
+            <VBox.margin>
+               <Insets left="25.0" top="5.0" />
+            </VBox.margin></FlowPane>
     </VBox>
       <rowConstraints>
          <RowConstraints />
