--- a/src/main/resources/view/PersonDetailsCard.fxml
+++ b/src/main/resources/view/PersonDetailsCard.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
+<!-- @@author aggarwalRuchir -->
 <VBox fx:id="personPanel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="photo" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
